# freepik-mcp

./: .env.dist  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py
src/application/: route_configuration.py  server_factory.py
src/domain/: config.py
src/examples/counter_strike_lobby/: csgo_tahuantinsuyu_intro.html
src/examples/mortal_kombat_inca/: mortal_kombat_inca_selector.html
src/infrastructure/: ai_polling_service.py  http_client.py  mystic_service.py  openapi_loader.py
