[project]
name = "freepik-fastmcp"
version = "0.1.0"
description = "FastMCP server for integrating with Freepik APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastmcp>=2.7.1",
    "httpx>=0.27.2",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"] 
